--- a/android/app/src/main/res/layout/content_inner.xml
+++ b/android/app/src/main/res/layout/content_inner.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".InnerActivity"
-    tools:showIn="@layout/activity_inner">
+    tools:context=".EventsFragment"
+    tools:showIn="@layout/activity_events">
 
     <Button
         android:id="@+id/button"
